# kalemediaplayer

./: .gitignore  README.md  meson.build  setup.py
.github/workflows/: build.yml
PyKmp/: __init__.py
src/: argparse.c  argparse.h  av_fork.c  av_fork.h  gtk-ui.c  gtk-ui.h  kmp.c  kmp.h  main.c  youtube_dl.c  youtube_dl.h
